<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackActivity"
    >

    <TextView
        android:id="@+id/credits_text_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/alegreya_black"
        android:paddingLeft="10dp"
        android:gravity="center"
        android:background="@drawable/background_credits_textview_2"
        android:text="@string/developer_info"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/credits_text_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/alegreya_black"
        android:background="@drawable/background_credits_textview_2"
        android:gravity="center"
        android:text="@string/version_info"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/credits_text_3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="145dp"
        android:background="@drawable/background_credits_textview_2"
        android:fontFamily="@font/alegreya_black"
        android:gravity="center"
        android:text="@string/last_update_info"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/credits_text_4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/background_credits_textview_2"
        android:fontFamily="@font/alegreya_black"
        android:gravity="center"
        android:text="@string/started_project_info"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/credits_text_5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/credits_text_3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-140dp"
        android:background="@drawable/background_credits_textview_2"
        android:fontFamily="@font/alegreya_black"
        android:gravity="center"
        android:text="@string/realese_project_info"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="140dp"
        android:layout_marginLeft="8dp"
        android:text="@string/text_layout_credits"
        android:fontFamily="@font/alegreya_black"
        android:textSize="24dp"

        />

    <include layout="@layout/layout_toolbar1_appname_all"></include>
    <include layout="@layout/layout_toolbar2_dataver_all"></include>

</RelativeLayout>