<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/indieflower"
                android:text="Money"
                android:textSize="30dp"

                />


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_money_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indieflower"
                android:text="@string/money_info_1"
                android:textSize="25dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_money_2"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indieflower"
                android:text="@string/money_info_2"
                android:textSize="25dp"

                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_money_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indieflower"
                android:layout_marginBottom="5dp"
                android:text="@string/money_info_3"
                android:textSize="25dp" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/layout_toolbar1_appname_all"></include>
    <include layout="@layout/layout_toolbar2_dataver_all"></include>

</RelativeLayout>
